--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dotlottie/player-component": "^2.7.12",
+    "@dotlottie/react-player": "^1.6.19",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "react": "^18",
