--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dotlottie/react-player": "^1.6.19",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.10.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
