--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dotlottie/player-component": "^2.7.12",
     "@dotlottie/react-player": "^1.6.19",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
