--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dotlottie/react-player": "^1.6.19",
     "@next/env": "^14.2.3",
     "axios": "^1.6.8",
+    "firebase": "^10.12.0",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
