--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dotlottie/react-player": "^1.6.19",
     "@next/env": "^14.2.3",
     "axios": "^1.6.8",
+    "email-check": "^1.1.0",
     "firebase": "^10.12.0",
     "framer-motion": "^11.1.9",
     "next": "14.2.3",
@@ -24,6 +25,7 @@
     "split-text": "^1.0.0"
   },
   "devDependencies": {
+    "@types/email-check": "^1.1.3",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
